--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=clean
+
+repository.strategy=jpa
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/clean-arch-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
